feat: Add storage and registry endpoint, add registry and storage cleanup, implement ui, improve local startup
