# src/main/kotlin/mk/ukim/finki/dnick/hosting/controller/ImageController.kt
@@ -3,42 +3,36 @@ package mk.ukim.finki.dnick.hosting.controller
 import jakarta.validation.Valid
 import jakarta.validation.constraints.NotBlank
 import mk.ukim.finki.dnick.hosting.generated.model.*
-import mk.ukim.finki.dnick.hosting.generated.model.BaseImage
-import mk.ukim.finki.dnick.hosting.image.*
-import mk.ukim.finki.dnick.hosting.infra.config.UserProperties
-import mk.ukim.finki.dnick.hosting.infra.config.auth.AuthenticationFacade
+import mk.ukim.finki.dnick.hosting.image.ImageBaseParams
+import mk.ukim.finki.dnick.hosting.image.ImageData
+import mk.ukim.finki.dnick.hosting.image.ImageExeParams
+import mk.ukim.finki.dnick.hosting.image.ImageGitParams
+import mk.ukim.finki.dnick.hosting.mapper.toDetailsDto
+import mk.ukim.finki.dnick.hosting.mapper.toDto
 import mk.ukim.finki.dnick.hosting.model.dto.ImageBuildRequestDto
-import mk.ukim.finki.dnick.hosting.model.entity.*
-import mk.ukim.finki.dnick.hosting.model.entity.BaseImageType
-import mk.ukim.finki.dnick.hosting.model.entity.ImageTag
 import mk.ukim.finki.dnick.hosting.service.ImageService
-import mk.ukim.finki.dnick.hosting.service.InternalArgument
+import mk.ukim.finki.dnick.hosting.service.NamespaceService
 import org.springframework.data.domain.Pageable
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
-import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.annotation.*
 import org.springframework.web.multipart.MultipartFile
 import org.springframework.web.server.ResponseStatusException
 import org.springframework.web.util.UriComponentsBuilder
-import java.time.ZoneId
 import java.util.*
-import mk.ukim.finki.dnick.hosting.generated.model.BaseImageType.Companion as BaseImageTypeDto
 import mk.ukim.finki.dnick.hosting.generated.model.Image as ImageDto
 import mk.ukim.finki.dnick.hosting.generated.model.ImageLog as ImageLogDto
-import mk.ukim.finki.dnick.hosting.generated.model.ImageTag as ImageTagDto
 
 @RestController
 @CrossOrigin(origins = ["*"])
 @RequestMapping("/api/v2/images")
 class ImageController(
     private val imageService: ImageService,
-    private val userProperties: UserProperties,
-    private val authenticationFacade: AuthenticationFacade
+    private val namespaceService: NamespaceService
 ) {
 
     @GetMapping
-    @PreAuthorize("hasAuthority('image-read')")
+//    @PreAuthorize("hasAuthority('image-read')")
     fun getImages(pageable: Pageable = Pageable.unpaged()): ResponseEntity<ImagesResponse> {
         return ResponseEntity.ok(
             imageService.getImages(pageable).let {
@@ -53,20 +47,27 @@ class ImageController(
     }
 
     @DeleteMapping("/{id}")
-    @PreAuthorize("hasAuthority('image-write')")
-    fun deleteImage(@PathVariable("id") id: Int): ResponseEntity<Unit> {
+//    @PreAuthorize("hasAuthority('image-write')")
+    fun deleteImage(@PathVariable id: Int): ResponseEntity<Unit> {
         imageService.deleteImage(id)
         return ResponseEntity.noContent().build()
     }
 
+    @DeleteMapping("/tag/{id}")
+//    @PreAuthorize("hasAuthority('image-write')")
+    fun deleteImageTag(@PathVariable id: Int): ResponseEntity<Unit> {
+        imageService.deleteImageTag(id)
+        return ResponseEntity.noContent().build()
+    }
+
     @GetMapping("/{id}")
-    @PreAuthorize("hasAuthority('image-read')")
+//    @PreAuthorize("hasAuthority('image-read')")
     fun getImage(@PathVariable("id") id: Int): ResponseEntity<ImageDetails> {
         return imageService.getImage(id).toDetailsDto().let { ResponseEntity.ok(it) }
     }
 
     @PostMapping
-    @PreAuthorize("hasAuthority('image-write')")
+//    @PreAuthorize("hasAuthority('image-write')")
     fun createImage(@RequestBody imageCreateRequest: ImageCreateRequest): ResponseEntity<ImageDto> {
         val image = imageService.createImage(imageCreateRequest)
         return ResponseEntity.created(UriComponentsBuilder.fromPath("/api/v1/image/${image.id}").build().toUri())
@@ -74,8 +75,8 @@ class ImageController(
     }
 
     @GetMapping("/{id}/log")
-    @PreAuthorize("hasAuthority('image-read')")
-    fun getImageLog(@PathVariable("id") id: Int): ImageLogDto {
+//    @PreAuthorize("hasAuthority('image-read')")
+    fun getImageLog(@PathVariable id: Int): ImageLogDto {
         return imageService.getImageLog(id)?.let {
             ImageLogDto(data = it.data)
         } ?: throw ResponseStatusException(HttpStatus.NOT_FOUND)
@@ -83,7 +84,7 @@ class ImageController(
 
     @PatchMapping("/{id}")
     fun editImage(
-        @PathVariable("id") id: Int,
+        @PathVariable id: Int,
         @RequestBody imageUpdateRequest: ImageUpdateRequest
     ): ResponseEntity<ImageDto> {
         val image = imageService.editImage(id, imageUpdateRequest)
@@ -118,7 +119,7 @@ class ImageController(
 
     fun ImageExeRequest.toParams(file: MultipartFile) = ImageExeParams(
         uid = UUID.randomUUID().toString(),
-        namespace = userProperties.namespace,
+        namespace = namespaceService.getUserNamespace(),
         file = file,
         base = this.base,
         data = this.data,
@@ -147,77 +148,7 @@ class ImageController(
         version = this.version,
         base = this.base,
         data = this.data,
-        namespace = userProperties.namespace,
+        namespace = namespaceService.getUserNamespace(),
         buildArgs = this.buildArgs
     )
-
-    fun Image.toDto() = ImageDto(
-        id = this.id!!,
-        name = this.name,
-        latest = this.tags.maxByOrNull { it.createdAt }?.toDto(),
-        releases = this.tags.size
-    )
-
-    fun ImageTag.toDto() = ImageTagDto(
-        id = this.id!!,
-        uid = this.hash.toString(),
-        version = this.version,
-        created = this.createdAt.atZone(ZoneId.systemDefault()).toOffsetDateTime(),
-        status = this.status.toDto()
-    )
-
-    fun ImageStatus.toDto() = ImageTagStatus.forValue(this.name.uppercase())
-
-    fun Image.toDetailsDto() = ImageDetails(
-        id = this.id!!,
-        name = this.name,
-        tags = this.tags.map { it.toDetailsDto() }.sortedByDescending { it.created },
-        releases = this.tags.size
-    )
-
-    fun ImageTag.toDetailsDto() = ImageTagDetails(
-        id = this.id!!,
-        version = this.version,
-        created = this.createdAt.atZone(ZoneId.systemDefault()).toOffsetDateTime(),
-        arguments = this.arguments
-            .filter {
-                !InternalArgument.valuesByType.getOrElse(this.base.type) { listOf() }
-                    .contains(it.key)
-            },
-        uid = this.hash.toString(),
-        status = this.status.toDto(),
-        base = this.base.toDetailsDto()
-    )
-
-    fun BaseImageRef.toDetailsDto() = BaseImage(
-        id = this.id!!,
-        type = this.type.toDetailsDto(),
-        language = when (this.type) {
-            BaseImageType.GIT -> this.baseImageGit?.base?.language ?: ""
-            BaseImageType.EXE -> this.baseImageExe?.base?.language ?: ""
-        },
-        version = when (this.type) {
-            BaseImageType.GIT -> this.baseImageGit?.base?.version ?: ""
-            BaseImageType.EXE -> this.baseImageExe?.base?.version ?: ""
-        },
-        git = this.baseImageGit?.let {
-            BaseImageRequestGit(
-                buildTool = it.buildTool,
-                buildToolVersion = it.version
-            )
-        },
-        arguments = this.arguments.map {
-            BaseImageArgument(
-                name = it.name,
-                description = it.description,
-                type = it.type.toDetailsDto(),
-                stage = it.stage.toDetailsDto()
-            )
-        }
-    )
-
-    fun BaseImageType.toDetailsDto() = BaseImageTypeDto.forValue(this.name.uppercase())
-    fun BaseImageArgType.toDetailsDto() = BaseArgumentType.forValue(this.name.uppercase())
-    fun BaseImageArgStage.toDetailsDto() = BaseArgumentStage.forValue(this.name.uppercase())
-
 }
