# src/main/kotlin/mk/ukim/finki/dnick/hosting/model/dto/ImageFilterCriteria.kt
@@ -1,0 +1,7 @@
+package mk.ukim.finki.dnick.hosting.model.dto
+
+data class ImageFilterCriteria(
+    val user: String?,
+    val app: String?,
+    val namespace: String?
+)
