# src/main/kotlin/mk/ukim/finki/dnick/hosting/model/entity/User.kt
@@ -16,6 +16,15 @@ class User(
     @Column(name = "uid", nullable = false)
     var uid: UUID,
 
+    @Column(name = "username")
+    var username: String?,
+
+    @Column(name = "first_name")
+    var firstName: String?,
+
+    @Column(name = "last_name")
+    var lastName: String?
+
 //    @OneToMany(mappedBy = "user")
 //    var namespaces: MutableSet<Namespace> = mutableSetOf()
 ) : BaseEntity<Int?>() {
